<resources>
    <string name="app_name" translatable="false">Portsmouth Uni Bus</string>
    <string name="minutes">minutes</string>
    <string name="metres_away">metres away</string>
    <string name="title_activity_detail">Stop Times</string>
    <string name="action_settings">Settings</string>
    <string name="change_stop">Change Stop</string>
    <string name="timetable">Timetable</string>
    <string name="find_a_stop">Find Stop</string>
    <string name="this_timetable">This Timetable</string>
    <string name="select_stop">Select a stop to view</string>
    <string name="select_default_stop">Select a Home stop</string>
    <string name="stop_next_departure">%1$s %2$s</string>
    <string name="one_minute">minute</string>
    <string name="arrival_now">Departing now</string>
    <string name="set_home_stop">Set Home Stop</string>
    <string name="title_activity_settings">Settings</string>
    <string name="toggle_night_mode">Toggle Night Mode</string>
    <string name="local_map">Find Stop</string>
    <string name="next_departure">Next departure</string>
    <string name="dialog_create_shortcut">Do you wish to create a shortcut for the selected stop</string>
    <string name="onboarding_select_stop">Select your default home stop</string>
    <string name="onboarding_location_title">Be informed when the next bus is while you wait</string>
    <string name="onboarding_location_description">This feature and more requires location permission</string>
    <string name="onboarding_map_title">See directions to where your closest stop is</string>
    <string name="onboarding_map_description">Would you like to use the map feature?</string>
    <string name="onboarding_night_title">Night mode </string>
    <string name="onboarding_finish">Get started</string>
    <string name="onboarding_no">No thanks</string>
    <string name="onboarding_yes">Okay</string>
    <string name="onboarding_sure">Sure</string>
    <string name="detail_toolbar_title">"%1$s to %2$s</string>
    <string name="home_next_bus_union">Next bus to Union</string>
    <string name="home_next_bus_uni">Next bus to University</string>
    <string name="home_closest_stop_next_departure_from">From %1$s</string>
    <string name="home_viewgroup_closest_map_title">Nearest Stop</string>
    <string name="time_hour_plus_text">Over one hour from now</string>
    <string name="timetable_next_bus">Next bus due at %1$s</string>
    <string name="navigate">Navigate</string>
    <string name="directions">Directions</string>
    <string name="set_favourite">Favourite</string>
    <string name="favorited">Favorited</string>
    <string name="transition_image">imageTransition</string>
    <string name="error_play_services_needed">Google Play Services is required for location services</string>
    <string name="error_play_services_update">An update to Google Play Services is required for location services</string>
    <string name="error_no_timetable_selected">Please select a timetable to view</string>
    <string name="error_no_location">Location not found</string>
    <string name="error_no_buses">No more buses scheduled</string>
    <string name="error_no_buses_from_here">No more buses scheduled from this stop</string>
    <string name="error_no_buses_home">No more buses are scheduled to stop at your home stop today</string>
    <string name="error_no_buses_scheduled">No buses scheduled today</string>
    <string name="error_not_in_portsmouth">Are you in Portsmouth?</string>
    <string name="error_no_stop_selected">No Stop Selected</string>
    <string name="error_GPS_off">Device GPS is turned off</string>
    <string name="error_no_connection">No internet connection available</string>
    <string name="error_route_display">Cannot display route</string>
    <string name="error_eastney">The Eastney service does not run during weekends or holidays</string>
    <string name="error_bank_holiday">The bus service does not run on bank holidays</string>
    <string name="error_weekend_in_holiday">The bus service does not run out of term during the weekend</string>
    <string name="error_server_response">Error getting response from server</string>
    <string name="location_permission_hint">Enable the location permission to see the closest stop to you</string>
    <string name="location_permission_hint_wide">Enable the location permission to see the map around you</string>
    <string name="preferences_analytics">com.malcolm.portsmouthunibus.analytics</string>
    <string name="preferences_name">com.malcolm.portsmouthunibus_preferences</string>
    <string name="preferences_home_bus_stop" translatable="false">com.malcolm.portsmouthunibus.homebusstop</string>
    <string name="preferences_instant_card" translatable="false">com.malcolm.portsmouthunibus.instantcard</string>
    <string name="preferences_maps_card" translatable="false">com.malcolm.portsmouthunibus.mapscard</string>
    <string name="preferences_favourite" translatable="false">com.malcolm.portsmouthunibus.favourite</string>
    <string name="preferences_night_mode_new" translatable="false">com.malcolm.portsmouthunibus.nightmode.new</string>
    <string name="preferences_onboarding_3" translatable="false">com.malcolm.portsmouthunibus.onboarding3</string>
    <string name="preferences_new_onboarding" translatable="false">com.malcolm.portsmouthunibus.new.onboarding</string>
    <string name="preferences_shortcuts_reset" translatable="false">com.malcolm.portsmouthunibus.shortcuts</string>
    <string name="preferences_24hourclock" translatable="false">com.malcolm.portsmouthunibus.24hourclock</string>
    <string name="preference_last_viewed_stop" translatable="false">com.malcolm.portsmouthunibus.lastviewed</string>
    <string name="preferences_transient_last_image_viewed" translatable="false">com.malcolm.portsmouthunibus.transient.image</string>
    <string name="preferences_analytics_off">Analytics relating to app usage will not be collected from this device.</string>
    <string name="preferences_analytics_on">Allow analytics to be collected. This is used to improve the app for the future.</string>
    <string-array name="preferences_night_mode_list">
        <item>Automatic</item>
        <item>Day</item>
        <item>Night</item>
    </string-array>
    <string-array name="preferences_night_mode_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="shortcut_home_timetable_name_long">Home Timetable</string>
    <string name="shortcut_home_timetable_name_short">Home Stop</string>
    <string name="shortcut_home_timetable" translatable="false">home_timetable</string>
    <string name="shortcut_home_timetable_action" translatable="false">com.malcolm.portsmouthunibus.VIEW.TIMETABLE</string>
    <string name="shortcut_specific_timetable" translatable="false">specific_timetable</string>
    <string name="shortcut_specific_timetable_action" translatable="false">com.malcolm.portsmouthunibus.VIEW.TIMETABLE.SPECIFIC</string>
    <string name="intent_list_position" translatable="false">com.malcolm.portsmouthunibus.VIEW.LIST.POSITION</string>
    <string name="intent_stop" translatable="false">com.malcolm.portsmouthunibus.VIEW.STOP</string>
    <string name="intent_stop_time" translatable="false">com.malcolm.portsmouthunibus.VIEW.STOP.TIME</string>
    <string name="intent_stop_viewed" translatable="false">com.malcolm.portsmouthunibus.VIEW.CALLING.STOP</string>
    <string name="intent_stop_via" translatable="false">com.malcolm.portsmouthunibus.VIEW.CALLING.STOP.VIA</string>
    <string name="firebase_property_stop_id" translatable="false">stopId</string>
    <string name="firebase_property_list_position" translatable="false">listPosition</string>
    <string name="firebase_property_destination" translatable="false">destinationStop</string>
    <string name="firebase_property_stop_time" translatable="false">time</string>
    <string name="firebase_event_shortcut_created" translatable="false">shortcut_created</string>
    <string name="firebase_event_home_stop_changed" translatable="false">home_stop_changed</string>
    <string name="firebase_event_home_shortcut_used" translatable="false">home_shortcut_used</string>
    <string name="firebase_event_home_navigation_request" translatable="false">home_navigation_request</string>
    <string name="firebase_event_maps_navigation_request" translatable="false">maps_navigation_request</string>
    <string name="firebase_event_specific_shortcut_used" translatable="false">specific_shortcut_used</string>
    <string name="firebase_event_timetable_detail_request" translatable="false">timetable_detail_requested</string>
    <string name="firebase_event_timetable_changed_stop" translatable="false">timetable_changed_stop</string>
    <string-array name="onboarding_titles">
        <item>Straight to the point</item>
        <item>Always know the way</item>
        <item>Plan ahead</item>
        <item>Night mode</item>
    </string-array>
    <string-array name="onboarding_subtitles">
        <item>The next bus from home to uni is always the first thing you see.</item>
        <item>See your nearest bus stop.</item>
        <item>The timetable for each stop.\nIncluding weekends and holidays.</item>
        <item>For when things get dark.</item>
    </string-array>
    <string-array name="onboarding_subtitles_M">
        <item>The next bus from home to uni is always the first thing you see.</item>
        <item>See your nearest bus stop.\nAvailable if you grant location permission.</item>
        <item>The timetable for each stop.\nIncluding weekends and holidays.</item>
        <item>For when things get dark.</item>
    </string-array>
    <string name="onboarding_subtitle">Helping you be on time, all the time.</string>
    <string name="onboarding_permission">Grant permission</string>
    <string name="onboarding2_subtitle">Get started quickly with the Portsmouth Uni Bus app by using the walkthrough.</string>
    <string name="onboarding2_yes">Sure</string>
    <string name="onboarding2_no">No thanks</string>
    <string name="onboarding_night_mode">Night mode</string>
    <string name="onboarding_night_mode_auto">Set automatically</string>
    <string-array name="bus_stops_home">
        <item
            >Langstone</item>
        <item
            >Locksway Road</item>
        <item
            >Goldsmith Avenue adj Lidl</item>
        <item
            >Goldsmith Avenue opp Station</item>
        <item
            >Winston Churchill Avenue</item>
    </string-array>
    <string-array name="bus_stops_spinner">
        <item
            >Langstone</item>
        <item
            >Locksway Road for Milton Park</item>
        <item
            >Goldsmith Avenue adj Lidl</item>
        <item
            >Goldsmith Avenue opp Fratton Station</item>
        <item
            >Winston Churchill Avenue adj Ibis Hotel</item>
        <item
            >Cambridge Road adj Nuffield Centre</item>
        <item
            >Winston Churchill Avenue adj Law Courts</item>
        <item
            >Goldsmith Avenue adj Fratton Station</item>
        <item
            >Goldsmith Avenue opp Lidl</item>
        <item
            >Goldsmith Avenue adj Milton Park</item>
        <item
            >IMS Eastney</item>
    </string-array>
    <string-array name="bus_stops_drawables">
        <item
            >langstone</item>
        <item
            >locksway</item>
        <item
            >adj_Lidl</item>
        <item
            >fawcett</item>
        <item
            >ibis</item>
        <item
            >nuffield</item>
        <item
            >law_Courts</item>
        <item
            >fratton</item>
        <item
            >opp_Lidl</item>
        <item
            >milton</item>
        <item
            >eastney</item>
    </string-array>
</resources>