<?xml version="1.0" encoding="utf-8"?>
<!--Todo: Enable material card view when components released-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/top_layout_card"
    app:cardBackgroundColor="@color/background"
    tools:visibility="visible"
    android:visibility="invisible"
    android:alpha="0"
    tools:alpha="1">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:id="@+id/top_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/top_layout_stop"
            tools:src="@drawable/lidl_key"
            android:transitionName="@string/transition_image"/>

        <TextView
            android:id="@+id/top_layout_stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@id/top_layout_next_bus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_image"
            tools:text="Goldsmith Avenue adj Lidl"/>

        <TextView
            android:id="@+id/top_layout_next_bus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:text="@string/timetable_next_bus"
            app:layout_constraintBottom_toTopOf="@id/top_layout_favourite"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/top_layout_stop"
            app:layout_constraintTop_toBottomOf="@id/top_layout_stop"
            app:layout_constraintVertical_chainStyle="spread_inside"
            app:layout_goneMarginBottom="8dp"/>

        <ImageButton
            android:id="@+id/top_favourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_favorite_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_image"
            android:visibility="gone"
            tools:visibility="visible"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackgroundBorderless"/>

        <Button
            android:id="@+id/top_layout_favourite"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/rubik_medium"
            app:layout_constraintWidth_min="0dp"
            android:gravity="center|start"
            android:text="@string/set_favourite"
            android:textAllCaps="true"
            android:textColor="@color/button"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/top_layout_stop"
            app:layout_constraintTop_toBottomOf="@id/top_layout_next_bus"
            tools:visibility="gone"/>
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
</LinearLayout>